--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ div {
 }
 
 #container {
-  font-family: UnifrakturMaguntia;
+  font-family: Kalam;
   width: 400px;
   height: 80;
   max-height: 600px;
